// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен выдать дистанцию 1`] = `
Object {
  "distance": 15,
  "formattedDistance": "15 км от Москвы",
  "geoRadiusExceeded": false,
}
`;

exports[`должен выдать дистанцию более георадиусса 1`] = `
Object {
  "distance": 200,
  "formattedDistance": "более 200 км от Москвы",
  "geoRadiusExceeded": true,
}
`;

exports[`должен выдать дистанцию до совпадающего, если выбрана область и прилетает два региона в distance_to_selected_geo 1`] = `
Object {
  "distance": 180,
  "formattedDistance": "180 км от Краснодара",
  "geoRadiusExceeded": false,
}
`;

exports[`должен выдать дистанцию, если выбрана область и прилетает дистанция до столицы 1`] = `
Object {
  "distance": 100,
  "formattedDistance": "100 км от Москвы",
  "geoRadiusExceeded": false,
}
`;

exports[`должен выдать дистанцию, если георадиус 0 1`] = `
Object {
  "distance": 15,
  "formattedDistance": "15 км от Москвы",
  "geoRadiusExceeded": false,
}
`;
